fixed overflow issue in projects component

--- a/src/components/Programs/projects/Project.module.scss
+++ b/src/components/Programs/projects/Project.module.scss
@@ -62,3 +62,11 @@
     max-width: 800px;
   }
 }
+@media screen and (max-width: 355px) {
+  .project-container {
+    min-height: 500px;
+  }
+  .technologies {
+    flex-direction: column;
+  }
+}
